// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Serializable denormalization denormalizes as plain 1`] = `
Object {
  "anotherItem": Object {
    "thing": 500,
  },
  "time": 2020-06-07T02:00:15.000Z,
  "user": User {
    "createdAt": 2020-06-07T02:00:15.000Z,
    "id": "1",
    "name": "Nacho",
  },
}
`;

exports[`Serializable denormalization denormalizes date and custom 1`] = `
Object {
  "anotherItem": Object {
    "thing": 500,
  },
  "time": 2020-06-07T02:00:15.000Z,
  "user": User {
    "createdAt": 2020-06-07T02:00:15.000Z,
    "id": "1",
    "name": "Nacho",
  },
}
`;

exports[`Serializable normalization normalizes date and custom 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "1": User {
        "createdAt": 2020-06-07T02:00:15.000Z,
        "id": "1",
        "name": "Nacho",
      },
    },
  },
  "entityMeta": Object {
    "User": Object {
      "1": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "anotherItem": Object {
      "thing": 500,
    },
    "time": 2020-06-07T02:00:15.000Z,
    "user": "1",
  },
}
`;

exports[`Serializable normalization normalizes date and custom 2`] = `"{\\"entities\\":{\\"User\\":{\\"1\\":{\\"id\\":\\"1\\",\\"createdAt\\":\\"2020-06-07T02:00:15.000Z\\",\\"name\\":\\"Nacho\\"}}},\\"indexes\\":{},\\"result\\":{\\"user\\":\\"1\\",\\"anotherItem\\":{\\"thing\\":500},\\"time\\":\\"2020-06-07T02:00:15.000Z\\"},\\"entityMeta\\":{\\"User\\":{\\"1\\":{\\"expiresAt\\":null,\\"date\\":1557831718135}}}}"`;
